{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 68,
  "lineage": "2afaa69a-2904-fc16-7a8b-1f2b4e429313",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed8261cddf22dbbc",
            "association_id": "eipassoc-0400f381df9b8fb9b",
            "domain": "vpc",
            "id": "eipalloc-0ed8261cddf22dbbc",
            "instance": "i-0b2a53b03e54b2c28",
            "network_border_group": "us-east-1",
            "network_interface": "eni-088160c2a98ba469c",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-50-17-76-203.compute-1.amazonaws.com",
            "public_ip": "50.17.76.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WO-01-jenkins-instance",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01-jenkins-instance",
              "Project": "WO"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.jenkins_server",
            "module.ec2_instance.aws_key_pair.wo_kp",
            "module.security_group.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.jenkins_public_subnet",
            "module.vpc.aws_vpc.jenkins_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:486139931451:instance/i-0b2a53b03e54b2c28",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2a53b03e54b2c28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wo_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088160c2a98ba469c",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb6380169010df51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a691601bf665689",
            "tags": {
              "Name": "WO-01-jenkins-instance",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01-jenkins-instance",
              "Project": "WO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0608b3118f56e6a49"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_key_pair.wo_kp",
            "module.security_group.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.jenkins_public_subnet",
            "module.vpc.aws_vpc.jenkins_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486139931451:security-group/sg-0608b3118f56e6a49",
            "description": "Security group for jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0608b3118f56e6a49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "136.226.251.0/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WO-01_jenkins_sg",
            "name_prefix": "",
            "owner_id": "486139931451",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WO-01_jenkins_sg",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01_jenkins_sg",
              "Project": "WO"
            },
            "timeouts": null,
            "vpc_id": "vpc-058695502f19ef5ff"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486139931451:internet-gateway/igw-0c61ac9f2569b350b",
            "id": "igw-0c61ac9f2569b350b",
            "owner_id": "486139931451",
            "tags": {
              "Name": "WO-01-jenkins_igw",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01-jenkins_igw",
              "Project": "WO"
            },
            "vpc_id": "vpc-058695502f19ef5ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486139931451:route-table/rtb-0d912e0a7a69cb65c",
            "id": "rtb-0d912e0a7a69cb65c",
            "owner_id": "486139931451",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c61ac9f2569b350b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058695502f19ef5ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.jenkins_igw",
            "module.vpc.aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a22f7c28d1ada9a3",
            "route_table_id": "rtb-0d912e0a7a69cb65c",
            "subnet_id": "subnet-09a691601bf665689"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.jenkins_igw",
            "module.vpc.aws_route_table.jenkins_public_rt",
            "module.vpc.aws_subnet.jenkins_public_subnet",
            "module.vpc.aws_vpc.jenkins_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486139931451:subnet/subnet-09a691601bf665689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a691601bf665689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486139931451",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WO-01-jenkins_subnet",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01-jenkins_subnet",
              "Project": "WO"
            },
            "vpc_id": "vpc-058695502f19ef5ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.jenkins_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486139931451:vpc/vpc-058695502f19ef5ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004edba954df010a4",
            "default_route_table_id": "rtb-03a63cb400399d679",
            "default_security_group_id": "sg-03596b84a97d083d7",
            "dhcp_options_id": "dopt-0010fd8d2e5560f78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-058695502f19ef5ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a63cb400399d679",
            "owner_id": "486139931451",
            "tags": {
              "Name": "WO-01-jenkins_vpc",
              "Project": "WO"
            },
            "tags_all": {
              "Name": "WO-01-jenkins_vpc",
              "Project": "WO"
            }
          }
        }
      ]
    }
  ]
}